stop wrapping the dropdown part of the header

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,6 +56,7 @@ a:active {
    text-align: center;
    padding: 1%;
    background-color: #fefefe;
+   white-space: nowrap;
    /*margin: 1%;*/
  }
 
